# bfrm

./: BinaryFiles  DESCRIPTION  NAMESPACE  README
R/: AllClasses.R  AllGenerics.R  bfrm.R  bfrmModel.R  bfrmResult.R  evolve.R  projection.R  writeData.R  writeParam.R  zzz.R
man/: bfrm-methods.Rd  bfrmModel-class.Rd  bfrmParam-class.Rd  bfrmResult-class.Rd  evolve-methods.Rd  evolveModel-class.Rd  (+1 more)
src/: Makevars  (+1 more)
src/bfrm21/: ComBfrm.cpp  ComBfrm.h  Makefile  Makefile.am  Makefile.in  Model.cpp  Model.h  aclocal.m4  bandmat.cpp  bfrm.cpp  bfrm.h  bfrm_nondp.cpp  bfrmdata.cpp  bfrmdata.h  bfrmevo.cpp  bfrmevo.h  bfrmpar.cpp  bfrmprior.cpp  bfrmprior.h  bfrmrawdata.cpp  bfrmrawdata.h  bfrmresult.cpp  bfrmresult.h  bfrmscreener.cpp  bfrmscreener.h  cholesky.cpp  config.guess  configure  configure.ac  default.parameters.txt  evalue.cpp  extreal.h  fft.cpp  hholder.cpp  include.h  inversewishart.cpp  inversewishart.h  jacobi.cpp  libtool  makefile  (+28 more)
src/bfrm21/.deps/: Model.Plo  bandmat.Plo  bfrm-bfrm.Po  bfrm.Plo  bfrmdata.Plo  bfrmevo.Plo  bfrmprior.Plo  bfrmrawdata.Plo  bfrmresult.Plo  bfrmscreener.Plo  cholesky.Plo  evalue.Plo  extreal.Plo  fft.Plo  hholder.Plo  inversewishart.Plo  jacobi.Plo  ltqnorm.Plo  mdp.Plo  myexcept.Plo  newfft.Plo  newmat1.Plo  newmat2.Plo  newmat3.Plo  newmat4.Plo  newmat5.Plo  newmat6.Plo  newmat7.Plo  newmat8.Plo  newmat9.Plo  newmatex.Plo  newmatnl.Plo  newmatrm.Plo  newran.Plo  solution.Plo  sort.Plo  stat.Plo  stdafx.Plo  submat.Plo  svd.Plo  (+1 more)
src/bfrm21/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
(+3 files in other folders)
